# pelican-redirect-url

./: CHANGELOG.md  pyproject.toml  setup.py
.github/workflows/: release.yml
pelican/plugins/redirect_url/: __init__.py  redirect_url.py
tests/: test_redirect_url.py
