[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pelican-redirect-url"
description = "Pelican plugin to redirect to any URL"
version = "0.1.1"
license = {text = "AGPL-3.0-or-later"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "FriedrichFröbel"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "pelican",
    "plugin",
    "redirect",
]
requires-python = ">=3.10, <4"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/FriedrichFroebel/pelican-redirect-url"
Repository = "https://github.com/FriedrichFroebel/pelican-redirect-url"
Issues = "https://github.com/FriedrichFroebel/pelican-redirect-url/issues"
Changelog = "https://github.com/FriedrichFroebel/pelican-redirect-url/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "flake8",
    "pep8-naming",
    "flake8-bugbear",
    "pelican>=4.5",
    "Markdown",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "pelican.plugins.redirect_url",
    "pelican.plugins.redirect_url.*"
]
namespaces = true
